# editorial-assistant

./: .gitignore  README.md
scout_agent/: README.md  agent.py  evaluate.py  evaluator.py  main.py  models.py  pyproject.toml  tools.py
